Fixed Logo Alignment

--- a/proportal/static/src/CSS/projectPortal.css
+++ b/proportal/static/src/CSS/projectPortal.css
@@ -21,10 +21,9 @@
     height: 50%;
 }
 
-#top_menu_container > a > img{
-    position: absolute;
-    top: 0;
-    margin-top: 10px;
+#top_menu_container > a{
+    margin: auto;
+    display: block;
 }
 
 #wrapwrap.o_portal > main {
